CSS transitions in profile components and fixed jumping bug

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -147,6 +147,7 @@ nav li:hover{
   color: white;
   font-weight: 600;
   transition: 0.5s;
+  border-bottom: solid 3px rgba(0,0,0,0);
 }
 
 .profile-left ul li:hover{
